# binaryninja-esp-app

./: .clang-format  .gitignore  CMakeLists.txt  README.md  plugin.json
src/: esp32.cpp  esp32.h  esp_app_plugin.cpp  esp_app_view.cpp  esp_app_view.h  esp_app_view_type.cpp  esp_app_view_type.h
